Bug 304895 - [reconciler] Issues with encoded URLs in platform.xml